--- a/src/main/resources/seed.conf
+++ b/src/main/resources/seed.conf
@@ -19,9 +19,7 @@ akka {
     }
   }
   cluster {
-    seed-nodes = [
-      "akka://words@127.0.0.1:2551"
-    ]
+    seed-nodes = ["akka://words@127.0.0.1:2551"]
     roles = ["seed"]
     role {
       seed.min-nr-of-members = 1
