finalise the work

--- a/src/main/resources/master.conf
+++ b/src/main/resources/master.conf
@@ -19,13 +19,12 @@ akka {
     }
   }
   cluster {
-    seed-nodes = ["akka://words@127.0.0.1:2551",
-    "akka://words@127.0.0.1:2552"]
-    roles = ["seed"]
+    seed-nodes = ["akka://words@127.0.0.1:2551","akka://words@127.0.0.1:2552"]
+    roles = ["master"]
     role {
        seed.min-nr-of-members = 1
-            master.min-nr-of-members = 1
-            worker.min-nr-of-members = 2
+       master.min-nr-of-members = 1
+       worker.min-nr-of-members = 2
     }
   }
 }
