refactor .sh files

--- a/src/main/resources/master.conf
+++ b/src/main/resources/master.conf
@@ -13,13 +13,15 @@ akka {
       canonical {
         hostname = "127.0.0.1"
         hostname = ${?HOST}
-        prot = 2551
         port = ${?PORT}
       }
     }
   }
   cluster {
-    seed-nodes = ["akka://words@127.0.0.1:2551","akka://words@127.0.0.1:2552"]
+     seed-nodes = [
+         "akka://words@127.0.0.1:2551",
+         "akka://words@127.0.0.1:2552"
+     ]
     roles = ["master"]
     role {
        seed.min-nr-of-members = 1
