--- a/src/main/resources/seed.conf
+++ b/src/main/resources/seed.conf
@@ -19,12 +19,13 @@ akka {
     }
   }
   cluster {
-    seed-nodes = ["akka://words@127.0.0.1:2551","akka://words@127.0.0.1:2552"]
+    seed-nodes = [
+        "akka://words@127.0.0.1:2551",
+        "akka://words@127.0.0.1:2552"
+    ]
     roles = ["seed"]
     role {
        seed.min-nr-of-members = 1
-       master.min-nr-of-members = 1
-       worker.min-nr-of-members = 2
     }
   }
 }
